--- a/src/Employees.Contracts/appsettings.Development.json
+++ b/src/Employees.Contracts/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "externalSettings": {
+    "url": "http://masglobaltestapi.azurewebsites.net/api/Employees"
   }
 }
